# jetracer

./: .gitignore  BUILD.md  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  pyproject.toml  requirements-ai.txt  requirements.txt  setup.py
jetracer/: __init__.py  _version.py  nvidia_racecar.py
jetracer/scripts/: __init__.py  calibrate.py
notebooks/: basic_motion.ipynb  teleoperation.ipynb
